fix: holiday period
